<resources>
    <string name="app_name">RecyclerView2</string>
    <string name="contactimage">contactImage</string>
    <string name="contact">Contact</string>
    <string name="contact_number">Contact Number</string>
    <string name="image">Image</string>
    <string name="opendialog">OpenDialog</string>
    <string name="add_contact">Add Contact</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="add">Add</string>
</resources>