<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="#009688"
    android:orientation="vertical"
    android:paddingLeft="21dp"
    android:paddingRight="21dp"
    android:paddingBottom="11dp">


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="21dp"
        android:gravity="center"
        android:text="@string/add_contact"
        android:textColor="#fff"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:autofillHints=""
        android:background="#fff"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:padding="11dp" />

    <EditText
        android:id="@+id/edtNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:autofillHints=""
        android:background="#fff"
        android:hint="@string/enter_number"
        android:inputType="number"
        android:padding="11dp" />

    <Button
        android:id="@+id/btnAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="11dp"
        android:backgroundTint="#fff"
        android:text="@string/add"
        android:textColor="@color/design_default_color_on_secondary" />

</LinearLayout>