<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="7dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/Row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/contactImg"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="#c6f492"
                android:src="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/image"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/contactName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/contactNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/contact_number"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>